--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -44,8 +44,8 @@
             android:id="@+id/radioButton22"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
             android:checked="true"
+            android:minHeight="48dp"
             android:text="@string/radio_settings_mode_22" />
 
     </RadioGroup>
@@ -58,5 +58,24 @@
         android:text="@string/button_save"
         app:layout_constraintEnd_toStartOf="@+id/buttonBack"
         app:layout_constraintTop_toTopOf="@+id/buttonBack" />
+
+    <SeekBar
+        android:id="@+id/seekBarUpdateRate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateRate" />
+
+    <TextView
+        android:id="@+id/textViewUpdateRate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/textview_settings_updaterate"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupMode" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
